# kincir

./: .dockerignore  .gitignore  ACKNOWLEDGMENT_INTEGRATION_COMPLETE.md  CHANGELOG.md  CICD_INTEGRATION_COMPLETE.md  CI_CD_SIMPLIFICATION_COMPLETE.md  CI_FORMATTING_FIXES_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  DOCS_DEPLOYMENT_SETUP.md  DOCS_IMPROVEMENT_PLAN.md  DOCUMENTATION_FIXES_COMPLETE.md  Dockerfile  FINAL_PROJECT_STATUS.md  INTEGRATION_TEST_COMPLETION.md  JEKYLL_FIXES_COMPLETE.md  LICENSE  Makefile  PHASE_1_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.docker.md  README.md  RELEASE_0_2_0_SUMMARY.md  RELEASE_ANNOUNCEMENT.md  SESSION_COMPLETION_SUMMARY.md  SESSION_TASK_4_4_SUMMARY.md  SESSION_TASK_5_3_SUMMARY.md  TASK_4_4_COMPLETION.md  TASK_5_3_COMPLETION.md  TASK_5_4_INTEGRATION_TESTS_SUMMARY.md  _config.yml  check_docs_status.sh  comprehensive_fix.py  docker-compose.yml  docs_progress_2025-07-25.md  enhanced_docs_server.py  enhanced_docs_server_v2.py  enhanced_docs_server_v3.py  fix_mqtt_tests.py  fix_rabbitmq_tests.py  (+5 more)
.github/: CI_CD_SETUP.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: basic-ci.yml.disabled  ci-and-docs.yml  ci.yml  ci.yml.disabled  comprehensive-testing.yml.disabled  deploy-docs-simple.yml  docs.yml  docs.yml.disabled  jekyll.yml  performance.yml.disabled  security.yml  simple-ci.yml  static-docs.yml.disabled  ultra-simple-ci.yml.disabled
docs/: .gitignore  Gemfile  README.md  _config.yml  index.md  kafka-acknowledgment.md  mqtt-acknowledgment.md  rabbitmq-acknowledgment.md  router-acknowledgment.md  trigger-workflow.sh
docs/_layouts/: default.html  docs.html
docs/_sass/: custom.scss  main.scss
docs/assets/css/custom/: code-sample.css  documentation.css  examples.css  (+1 more)
docs/assets/js/: code-copy.js  docs-code-copy.js  main.js
docs/docs/: getting-started.md  index.md
docs/docs/backends/: index.md  nats.md
docs/docs/configuration/: index.md
docs/docs/installation/: index.md
docs/docs/middleware/: index.md
docs/docs/quick-start/: in-memory.md  index.md
docs/examples/: acknowledgments.md  error-handling.md  event-sourcing.md  in-memory.md  index.md  integration-testing.md  kafka.md  microservices.md  monitoring.md  mqtt.md  performance.md  rabbitmq.md  routing.md  unit-testing.md
docs/roadmap/: index.md
docs/scripts/: update_codeblocks.sh  update_layouts.sh
examples/: ack_example.rs  kafka_ack_example.rs  mqtt_ack_example.rs  rabbitmq_ack_example.rs  router_ack_example.rs
examples/ack-example/: Cargo.toml  README.md
examples/ack-example/src/: main.rs
examples/in-memory-example/: Cargo.toml
examples/in-memory-example/src/: main.rs
examples/kafka-example/: Cargo.toml
examples/kafka-example/src/: main.rs
examples/mqtt-example/: Cargo.toml
examples/mqtt-example/src/: main.rs
examples/mqtt-to-kafka-example/: .env_example  Cargo.toml  README.md  docker-compose.yml
examples/mqtt-to-kafka-example/src/: main.rs
examples/mqtt-to-rabbitmq-example/: .env_example  Cargo.toml  README.md  docker-compose.yml
examples/mqtt-to-rabbitmq-example/src/: main.rs
examples/protobuf-example/: Cargo.toml
examples/protobuf-example/src/: main.rs
examples/rabbitmq-example/: Cargo.toml
examples/rabbitmq-example/src/: main.rs
kincir/: Cargo.toml  README.md
kincir/benches/: acknowledgment_performance.rs  backend_comparison.rs  concurrent_operations.rs  kincir_benchmarks.rs  memory_broker.rs  router_performance.rs
kincir/examples/: ack_example.rs  kafka_ack_example.rs  mqtt_ack_example.rs  rabbitmq_ack_example.rs  router_ack_example.rs
kincir/src/: ack.rs  adapter.rs  backend.rs  kafka.rs  lib.rs  logging.rs  mqtt.rs  protobuf.rs  rabbitmq.rs  router.rs  tunnel.rs
kincir/src/backend/: tests.rs
kincir/src/kafka/: ack.rs  mod.rs  tests.rs
kincir/src/memory/: ack.rs  ack_fixed.rs  ack_tests.rs  advanced_tests.rs  broker.rs  comprehensive_ack_tests.rs  config.rs  error.rs  example.rs  mod.rs  publisher.rs  stats.rs  subscriber.rs  working_ack_test.rs
kincir/src/middleware/: mod.rs
kincir/src/mqtt/: ack.rs  mod.rs  tests.rs
kincir/src/nats/: mod.rs
kincir/src/rabbitmq/: ack.rs  mod.rs  tests.rs
kincir/src/router/: ack.rs
kincir/src/tests/: backend_unit_tests.rs  kafka_tests.rs  mod.rs  mqtt_tests.rs  rabbitmq_tests.rs
kincir/tests/: backend_integration_tests.rs  comprehensive_integration_tests.rs  cross_backend_ack_tests.rs  high_throughput_ack_tests.rs  integration_test.rs  kafka_ack_tests.rs  middleware_integration_tests.rs  mqtt_ack_tests.rs  nats_integration_tests.rs  rabbitmq_ack_tests.rs  router_ack_tests.rs  router_inmemory_tests.rs
scripts/: benchmark.sh  docker_env.sh  generate_docs.sh  release.sh  run_backend_benchmarks.sh  upgrade_deps.sh
tests/: comprehensive_integration_tests.rs  cross_backend_ack_tests.rs  high_throughput_ack_tests.rs  kafka_ack_tests.rs  mqtt_ack_tests.rs  rabbitmq_ack_tests.rs  router_ack_tests.rs
v02/: 01-in-memory-broker.md  02-ack-nack-handling.md  03-correlation-id-tracking.md  04-performance-benchmarks.md  05-testing-infrastructure.md  README.md  project-tracking.md
(+4 files in other folders)
