[workspace]
resolver = "2"
members = [
    "kincir",
    "examples/kafka-example",
    "examples/rabbitmq-example"
]

[workspace.package]
authors = ["Riza Alaudin Syah <rezaqt@gmail.com>"]
repository = "https://github.com/rezacute/kincir"

[workspace.dependencies]
kincir = { path = "kincir" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"