[workspace]
resolver = "2"
members = [
    "kincir",
    "examples/kafka-example",
    "examples/rabbitmq-example",
    "examples/protobuf-example",
    "examples/mqtt-example",
    "examples/mqtt-to-kafka-example",
    "examples/in-memory-example",
    "examples/ack-example"
]

[workspace.package]
authors = ["Riza Alaudin Syah <rezaqt@gmail.com>"]
repository = "https://github.com/rezacute/kincir"

[workspace.dependencies]
kincir = { path = "kincir" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Benchmark dependencies
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1.3"

[profile.bench]
debug = true

[profile.release]
debug = true
lto = true
codegen-units = 1