[package]
name = "kincir"
version = "0.1.3"
edition = "2021"
description = "A Rust message streaming library inspired by Watermill"
license = "MIT"
authors = ["Riza Alaudin Syah <rezaqt@gmail.com>"]
repository = "https://github.com/rezacute/kincir"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
lapin = "2.3"
tokio-amqp = "2.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.7", features = ["v4"] }
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1.3"

[[bench]]
name = "kincir_benchmarks"
harness = false
