[package]
name = "kincir"
version = "0.1.6"
edition = "2021"
description = "A Rust message streaming library inspired by Watermill"
license = "MIT"
authors = ["Riza Alaudin Syah <rezaqt@gmail.com>"]
repository = "https://github.com/rezacute/kincir"

[features]
default = ["logging"]
logging = []
protobuf = ["prost"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio"] }
lapin = "2.3"
tokio-amqp = "2.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.7", features = ["v4"] }
bincode = "1.3"
prost = { version = "0.12", optional = true }

rumqttc = { version = "0.24.0" }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1.3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio-amqp = "2.0" # Also in [dependencies]
futures = "0.3"    # Also in [dependencies]
futures-util = { version = "0.3" } # Removed features = ["stream"]

[[bench]]
name = "kincir_benchmarks"
harness = false
