[package]
name = "mqtt-to-rabbitmq-example"
version = "0.1.0"
edition = "2021"

[dependencies]
kincir = { path = "../../" } # Adjust path as necessary
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
